<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.gs.photos</groupId>
	<artifactId>WorkFlow</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.3</version>
	</parent>

	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<protobuf.version>2.5.0</protobuf.version>
		<apache.comon-io.version>2.8.0</apache.comon-io.version>
		<java.version>21</java.version>
		<ignite.version>2.16.0</ignite.version>
		<hbase.version>2.4.9</hbase.version>
		<h2.version>1.4.197</h2.version>
		<log4j.version>2.11.2</log4j.version>
		<guava.version>28.0-jre</guava.version>
		<javax.annotation.version>1.3.2</javax.annotation.version>
		<hadoop.version>3.2.1</hadoop.version>
		<kafka.version>3.2.0</kafka.version>
		<!-- <JAVA_8_HOME>D:/jdk-8.0.252.09-hotspot</JAVA_8_HOME> -->
		<JAVA_8_HOME>
			G:/eclipse-workspace-gsworkflow/java/adopt-jdk-8.0.252.09-hotspot</JAVA_8_HOME>
		<com.nurkiewicz.typeof>0.0.1</com.nurkiewicz.typeof>
		<avro.version>1.9.1</avro.version>
		<jcifs.version>2.1.5</jcifs.version>
		<zookeeper.version>3.7.0</zookeeper.version>
	</properties>
	<packaging>pom</packaging>
	<modules>
		<!-- <module>../hbase-shaded-parent</module> -->
		<module>../Model</module>
		<module>../HbaseFilters</module>
		<module>../comparators</module>
		<module>../serializers</module>
		<module>../WorkFlowKafkaStreamsCommon</module>
		<module>../WorkFlowCommonStreams</module>
		<module>../WorkFlowCoprocessor</module>
		<module>../WorkFlowComputeHashKey</module>
		<module>../WorkFlowDuplicatecheck</module>
		<module>../WorkFlowCopyFile</module>
		<module>../WorkFlowExtractImageInfo</module>
		<module>../WorkFlowHbaseMapReduceJobs</module>
		<module>../WorkflowScan</module>
		<module>../WorkflowHbase</module>
		<module>../WorkFlowProcessAndPublishThumbImages</module>
		<module>../WorkflowProcessAndPublishExifData</module>
		<module>../WorkFlowStorms</module>
		<module>../WorkFlowArchiveFile</module>
		<module>../WorkFlowMonitor</module>
		<module>../WorkFlowGateway</module>
		<module>../WorkFlowWebServices</module>
	</modules>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.11</version>
			</dependency>
			<!--
			https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-io</artifactId>
				<version>1.3.2</version>
			</dependency>
			<!--
			https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient -->
			<dependency>
				<groupId>commons-httpclient</groupId>
				<artifactId>commons-httpclient</artifactId>
				<version>3.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.hadoop</groupId>
				<artifactId>hadoop-distcp</artifactId>
				<version>${hadoop.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.kafka</groupId>
				<artifactId>kafka-clients</artifactId>
				<version>${kafka.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.hadoop</groupId>
				<artifactId>hadoop-yarn-server-nodemanager</artifactId>
				<version>${hadoop.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.hadoop</groupId>
				<artifactId>hadoop-client</artifactId>
				<version>${hadoop.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.hadoop</groupId>
				<artifactId>hadoop-common</artifactId>
				<version>${hadoop.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.hadoop</groupId>
				<artifactId>hadoop-hdfs</artifactId>
				<version>${hadoop.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.ignite</groupId>
				<artifactId>ignite-core</artifactId>
				<version>${ignite.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.hadoop</groupId>
				<artifactId>hadoop-auth</artifactId>
				<version>${hadoop.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.ignite</groupId>
				<artifactId>ignite-spring</artifactId>
				<version>${ignite.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.ignite</groupId>
				<artifactId>ignite-spring-boot-autoconfigure-ext</artifactId>
				<version>1.0.0</version>
			</dependency>

			<dependency>
				<groupId>org.apache.hbase</groupId>
				<artifactId>hbase-client</artifactId>
				<version>${hbase.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.hbase</groupId>
				<artifactId>hbase-common</artifactId>
				<version>${hbase.version}</version>
			</dependency>
			<!-- <dependency> <groupId>com.gs.photos</groupId>
			<artifactId>hbaseClientShaded</artifactId> 
				<version>${project.version}</version> </dependency> -->
			<dependency>
				<groupId>org.apache.avro</groupId>
				<artifactId>avro</artifactId>
				<version>${avro.version}</version>
			</dependency>
			<dependency>
				<groupId>com.gs.photos</groupId>
				<artifactId>Model</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.gs.photos</groupId>
				<artifactId>serializers</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.gs.photos</groupId>
				<artifactId>WorkFlowCommonStreams</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.gs.photos</groupId>
				<artifactId>WorkFlowKafkaStreamsCommon</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.gs.photos</groupId>
				<artifactId>HbaseFilters</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.gs.photos</groupId>
				<artifactId>WorkFlowHbaseMapReduceJobs</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>${h2.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.hbase</groupId>
				<artifactId>hbase-mapreduce</artifactId>
				<version>${hbase.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.hbase</groupId>
				<artifactId>hbase-protocol</artifactId>
				<version>${hbase.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.hbase</groupId>
				<artifactId>hbase-endpoint</artifactId>
				<version>${hbase.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.annotation</groupId>
				<artifactId>javax.annotation-api</artifactId>
				<version>${javax.annotation.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${apache.comon-io.version}</version>
			</dependency>
			<!--
			https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
			<dependency>
				<groupId>org.apache.zookeeper</groupId>
				<artifactId>zookeeper</artifactId>
				<version>${zookeeper.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>
			<dependency>
				<groupId>com.nurkiewicz.typeof</groupId>
				<artifactId>typeof</artifactId>
				<version>${com.nurkiewicz.typeof}</version>
			</dependency>
			<dependency>
				<groupId>com.emc.ecs</groupId>
				<artifactId>nfs-client</artifactId>
				<version>1.0.3</version>
			</dependency>
			<dependency>
				<groupId>eu.agno3.jcifs</groupId>
				<artifactId>jcifs-ng</artifactId>
				<version>${jcifs.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest-all</artifactId>
				<version>1.3</version>
			</dependency>

		</dependencies>
	</dependencyManagement>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>3.5.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M1</version>
					<configuration>
						<argLine>--enable-preview</argLine>
						<systemProperties>
							<property>
								<name>user.home</name>
								<value>./src/test/resources</value>
							</property>
						</systemProperties>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-common</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-log4j12</artifactId>
				</exclusion>
				<exclusion>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>
</project>